--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Yi Meng's Site</title><script defer="defer" src="/personal-site/static/js/main.8a992e38.js"></script></head><body><div id="root"></div></body></html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Yi Meng's Site</title><script defer="defer" src="./static/js/main.7fac7402.js"></script></head><body><div id="root"></div></body></html>
